@@ -6,7 +6,7 @@ public class ServiceUnavailableException extends Exception {
     }
 
     private static String getMessage(String deploymentName) {
-        return String.format("Service for deployment %s is not available. Are the VMs running?",
+        return "Service for deployment %s is not available. Are the VMs running?".formatted(
                 deploymentName);
     }
 }
